
[workspace]
resolver = '2'
members = [
	'apps/api',
	'libs/prisma_generator',
	'libs/prisma_client',
	'libs/authentication_cookie',
	'libs/authentication_middleware',
	'libs/authentication_context',
	'libs/authentication_password_strategy',
	'libs/graphql_common',
]

[workspace.dependencies]
actix-web = '4.5.1'
async-graphql = { "version" = "7.0.3", features = ["chrono"] }
async-graphql-actix-web = "7.0.3"
futures-util = '0.3.30'
serde = '1.0.194'
chrono = "0.4.37"
prisma-client-rust = { git = 'https://github.com/Brendonovich/prisma-client-rust', tag = '0.6.11', default-features = false, features = [ 'postgresql' ] }

[profile.release]
lto = true
